styles.css
body{
    margin: 0px;
    padding: 0px;
}

.first_nav {
    padding-bottom: 10px;
}

.logo {
    margin-left: 10px;
    margin-top: 15px;
    width: 38%;
}

.shopbag {
    margin-left: 10px;
    margin-top: 15px;
    margin-right: 15px;
    float: right;
    
}

.hamburger {
    margin-left: 14px;
    margin-right: 17px;
    margin-top: 16px;
    float: right;
}

.line_break {
    border-top: 1px solid black;
    width: 100%;
    margin-top: 0em;
    margin-bottom: 0em;
}

.second_nav {
    display: flex;
    justify-content: space-around;
    
    
}

.btn-group {
    display: flex;
    justify-content: space-evenly;
    
}

.btn {
    background-color: white;
    border: none;
    border-right: 1px solid black;
    padding-top: 16px;
    padding-bottom: 16px;
    padding-right: 40px;
    font-weight: bold;
    color:
    rgb(112, 35, 240);
    text-decoration: none;
    font-size: 0.875rem;
    font-family: Arial, Helvetica, sans-serif;
}

.btn-right {
    background-color: white;
    border: none;
    padding-right: 0px;
    font-weight: bold;
    color:
    rgb(112, 35, 240);
    text-decoration: none;
    font-size: 0.875rem;
}

.quick_link {
    color:
    rgb(112, 35, 240);
    border-right: 2px solid
    rgb(0, 0, 0);
    padding-bottom: 15px;
    padding-top: 15px;
    font-size: 0.875rem;
    height: 100%;
    padding-right: 25px;
    padding-left: 25px;
    font-weight: bold;
}

#quick_link_right {
    border-right: none;
    color:
    rgb(112, 35, 240);
    font-size: 0.875rem;
    padding-bottom: 15px;
    padding-top: 15px;
    font-weight: bold;
    
}


.hero_image {
    width: 100%;
}

.main_landing {
    display: flex;
    justify-content: center;
}

.match_me {
    position: absolute;
    top: 200px;
}




font-weight: bold;
    color:
    rgb(112, 35, 240);
    text-decoration: none;
    font-size: 0.875rem;
    width: 33.33%;
    height: 100%;
    -moz-box-align: center;
    align-items: center;
    -moz-box-pack: center;
    justify-content: center;
    border-right: 2px solid
    rgb(0, 0, 0);
    border-bottom: 2px solid
    rgb(0, 0, 0);

